bad/bin_op_le_array_string.example_compiler_output
ERROR
[1mbad/bin_op_le_array_string.lat:3:13: [1;31merror: [0;1moperator <= is defined only for int values and string values, not `int[]` and `string`[m
	new int[3] <= "";
	           [1;32m^[m
